# vsr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: relay.py  test.html
vsr/: __init__.py  logger.py  server.py
vsr/core/: broadcaster.py  camera.py  packet.py  relay.py  stream_handler.py
vsr/core/modules/: stream_handler.py
vsr/html/: request.py  response.py  utils.py
vsr/http/: consts.py  request.py  response.py
vsr/logging/: __init__.py  logger.py
vsr/logging/adapters/: __init__.py  thread_logger_adapter.py
vsr/modules/: broadcaster.py  relay.py
vsr/utils/: communication.py
