[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = []

[project]
name = "vsr"

# vsr/__init__.py
version = "0.0.0"
authors = [
  { name = "zNitche" },
]
description = "video streaming relay"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/zNitche/vsr"
Issues = "https://github.com/zNitche/vsr/issues"
